# multi-module-repos-bug

./: .gitignore  README.md
mod1/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift
mod2/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift
