module(name = "mod2")

# ------------ rust
bazel_dep(name = "rules_rust", version = "0.67.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "unicode-segmentation",
    version = "1.12.0",
)
crate.from_specs()
use_repo(crate, "crates")

# ------------ swift
bazel_dep(
    name = "apple_support",
    version = "1.24.4",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_swift",
    version = "3.3.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "rules_swift_package_manager", version = "1.10.0")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_package",
    "swiftpkg_swift_collections",
)
